--- a/index.html
+++ b/index.html
@@ -15,29 +15,21 @@
     <header>
         <div class="container">
             <button class="btn-mobile">
-<<<<<<< HEAD
-                <img src="img/Group 40.svg">
-=======
-                <img src="img/Group 40.svg" alt="menu sanduíche">
->>>>>>> 7a2bfe56cbaa5655733025941d9d13981c31f848
+                <img src="img/Group 40.svg" alt="hamburguii">
             </button>
-            <img src="img/logo.svg" class="logo" data-aos="fade-right">
+            <img src="img/logo.svg" class="logo" alt="Logo - FIGPRO" data-aos="fade-right">
             <nav data-aos="fade-left">
-                <a href="#" class="actived">INÍCIO</a>
-                <a href="#">SOBRE</a>
-                <a href="#">EXEMPLOS</a>
-                <a href="#">CONTATO</a>
+                <a href="#" class="actived">HOME</a>
+                <a href="#">ABOUT</a>
+                <a href="#">EXAMPLES</a>
+                <a href="#">CONTACT</a>
             </nav>
             <div class="right" data-aos="fade-left">
                 <button type="button">
-                    <img src="img/search-2905.svg">
+                    <img src="img/search-2905.svg" alt="Botão de Pesquisa">
                 </button>
                 <button type="button">
-<<<<<<< HEAD
-                    <img src="img/sign-out-3300.svg" >
-=======
-                    <img src="img/sign-out-3300.svg" alt="Botão de Login">
->>>>>>> 7a2bfe56cbaa5655733025941d9d13981c31f848
+                    <img src="img/sign-out-3300.svg" alt="Botão de Logar">
                 </button>
             </div>
         </div>
@@ -47,46 +39,53 @@
         <div class="container">
             <div class="left-text" data-aos="fade-up">
                 <div class="title">
-                    <h1>Explore o<br />
-                        <span>Mundo Encantado</span>
+                    <h1>Explore the<br />
+                        <span>Enchanted World</span>
                     </h1>
-                    <img src="img/of Animated Stickers!.svg" alt="de Figurinhas Animadas!">
+                    <img src="img/of Animated Stickers!.svg" alt="of Animated Stickers">
                 </div>
-                <p>Bem-vindo à Figpro, sua porta de entrada para um universo cheio de magia e diversão! Explore nossas seções exclusivas e mergulhe em um oceano de criatividade.</p>
+                <p>Welcome to Figpro, your gateway to a universe filled with magic and fun! Explore our exclusive sections and dive into an ocean of creativity.</p>
                 <button type="button">
-                    <span>Vamos lá</span>
-                    <img src="img/arrow.svg" alt="Seta">
+                    <span>Lets Go</span>
+                    <img src="img/arrow.svg" alt="Arrow">
                 </button>
                 <div class="users">
                     <ul>
-                        <li><img src="img/ghost-fear-22329 1.svg" alt="fantasma 01"></li>
-                        <li><img src="img/cartoon-ghost-black-outline-20102.svg" alt="fantasma 02"></li>
-                        <li><img src="img/halloween-2281.svg" alt="fantasma 03"></li>
+                        <li>
+                            <img src="img/ghost-fear-22329 1.svg" alt="ghost 01">
+                        </li>
+                        <li>
+                            <img src="img//cartoon-ghost-black-outline-20102.svg" alt="ghost 02">
+                        </li>
+                        <li>
+                            <img src="img/halloween-2281.svg" alt="ghost 03">
+                        </li>
                     </ul>
-                    <strong>+339 mil Usuários Ativos</strong>
+                    <strong>+339k Active Users</strong>
                 </div>
             </div>
-            <img src="img/art-destaque.png" class="ilustra" alt="imagem principal" data-aos="zoom-in">
+            <img src="img/art-destaque.png" class="ilustra" alt="hero-image" data-aos="zoom-in">
         </div>
     </section>
 
     <section class="s-numbers">
         <div class="container">
-            <p data-aos="fade-left">Descubra figurinhas que são verdadeiras estrelas do nosso catálogo! Nossa seção em destaque exibe as criações mais incríveis e encantadoras, prontas para dar vida às suas conversas e deixá-las ainda mais especiais.</p>
+            <p data-aos="fade-left">Discover stickers that are true stars in our catalog! Our Featured Section showcases the most incredible and enchanting creations, ready to bring life to your chats and make your conversations even more special.</p>
             <div class="box">
-                <img src="img/img+sombra.png" class="ilustra"  data-aos="fade-up">
+                <img src="img/img+sombra.png" class="ilustra" alt="passarinho" data-aos="fade-up">
                 <div class="content">
                     <ul class="text" data-aos="fade-left">
                         <li>
-                            <strong>Biblioteca de figurinhas</strong>
+                            <strong>sticker library</strong>
                             <h3>+1000</h3>
                         </li>
                         <li>
-                            <strong>Figurinhas gratuitas</strong>
+                            <strong>free stickers</strong>
                             <h3>+293</h3>
                         </li>
                         <li>
-                            <strong>Figurinhas por dia</strong>
+                            <strong>stickers created every day
+                            </strong>
                             <h3>+500</h3>
                         </li>
                     </ul>
@@ -98,19 +97,19 @@
     <section class="s-how-to-use">
         <div class="container">
             <div class="left" data-aos="fade-right">
-                <h2>Como usar</h2>
+                <h2>How To use</h2>
                 <ul>
                     <li>
-                        <h3>1 - Descubra o Encanto:</h3>
-                        <p>Participe em três passos simples! Primeiro, explore a seção em destaque e encontre as figurinhas que mais chamarem sua atenção.</p>
+                        <h3>1 - Discover the Enchantment:</h3>
+                        <p>Join us in three simple steps! First, explore the Featured Section and find the stickers that captivate you the most.</p>
                     </li>
                     <li>
-                        <h3>2 - Conecte-se à Magia:</h3>
-                        <p>Em seguida, clique em "Explorar Agora" para conhecer a história por trás do projeto na seção Sobre o Projeto. Conecte-se com a magia que dá vida a cada figurinha única.</p>
+                        <h3>2 - Connect to the Magic:</h3>
+                        <p>Next, click "Explore Now" to unveil the story behind the project in the About the Project Section. Connect to the magic that drives each unique sticker.</p>
                     </li>
                     <li>
-                        <h3>3 - Torne-se Parte da História:</h3>
-                        <p>Por fim, clique em "Saiba Mais Sobre Nós" e embarque na jornada das figurinhas que contam histórias. Agora você está pronto para fazer parte desse conto encantado. Basta seguir os passos e se cadastrar para desbloquear um mundo de diversão!</p>
+                        <h3>3 - Become Part of the Tale:</h3>
+                        <p>Lastly, click "Learn More About Us" and embark on the journey of stickers that tell stories. Now, you're ready to become part of this enchanting tale. Just follow these steps and register to unlock a world of fun!</p>
                     </li>
                 </ul>
             </div>
@@ -118,34 +117,30 @@
                 <img src="img/urso2.png" class="one" alt="urso" data-aos="fade-right">
                 <img src="img/urso3.png" class="two" alt="urso" data-aos="fade-left">
                 <img src="img/urso1.png" class="three" alt="urso" data-aos="fade-up">
+
                 <div class="shadow" data-aos="zoom-in"></div>
             </div>
         </div>
 
         <a href="" class="bnt-primary" data-aos="zoom-in">
-<<<<<<< HEAD
             <span>Lets Start</span>
-            <img src="img/arrow.png">
-=======
-            <span>Começar Agora</span>
-            <img src="img/arrow.png" alt="botão seta">
->>>>>>> 7a2bfe56cbaa5655733025941d9d13981c31f848
+            <img src="img/arrow.png" alt="arrow button">
         </a>
     </section>
 
     <section class="s-stories">
         <div class="container">
             <div class="title" data-aos="fade-right">
-                <h4>Figurinhas que <strong>contam</strong></h4>
-                <h2 style="font-size: 32em;">Histórias</h2>
+                <h4>Stickers  that <strong>tell</strong></h4>
+                <h2>Stories</h2>
             </div>
             <div class="text" data-aos="fade-up">
-                <img src="img/imgSobre1.png" >
+                <img src="img/imgSobre1.png" alt="sapo karate">
                 <div class="description">
-                    <p>Cada figurinha é uma pequena narrativa visual, transmitindo sentimentos e emoções em cada pixel. De expressões engraçadas a momentos emocionantes, nossas figurinhas são mais do que simples imagens: são histórias que você pode compartilhar com o mundo.</p>
-                    <p>Confira algumas das figurinhas da nossa galeria para se empolgar ainda mais.</p>
+                    <p>Each sticker is a small visual narrative, conveying feelings and emotions in every pixel. From funny expressions to emotional moments, our stickers are more than simple images; they are stories you can share with the world.</p>
+                    <p>Check out some of our sticker gallery to get even more hyped.</p>
                 </div>
-                <img src="img/arrow-img.png" class="arrow" alt="seta decorativa">
+                <img src="img/arrow-img.png" class="arrow" alt="">
             </div>
         </div>
     </section>
@@ -168,7 +163,7 @@
                         </div>
                         <div class="info">
                             <h3>little tay</h3>
-                            <p>Cheia de energia e atitude, Little Tay é perfeita para mostrar empolgação nas suas conversas.</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dapibus orci eu eros semper elementum. Sed sollicitudin erat non ipsum dignissim iaculis.</p>
                         </div>
                         <ul>
                             <li>
@@ -196,7 +191,7 @@
                         </div>
                         <div class="info">
                             <h3>little fiona</h3>
-                            <p>Encantadora e carismática, Fiona traz um toque de doçura para qualquer mensagem.</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dapibus orci eu eros semper elementum. Sed sollicitudin erat non ipsum dignissim iaculis.</p>
                         </div>
                         <ul>
                             <li>
@@ -224,7 +219,7 @@
                         </div>
                         <div class="info">
                             <h3>little Ghost</h3>
-                            <p>Divertido e brincalhão, este fantasma sorridente é ótimo para dar um sustinho de humor.</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dapibus orci eu eros semper elementum. Sed sollicitudin erat non ipsum dignissim iaculis.</p>
                         </div>
                         <ul>
                             <li>
@@ -252,8 +247,8 @@
                         </div>
                         <div class="info">
                             <h3>Bear leo</h3>
-                            <p>Forte e protetor, Bear Leo transmite segurança e amizade em cada gesto.</p>
-                    </div>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dapibus orci eu eros semper elementum. Sed sollicitudin erat non ipsum dignissim iaculis.</p>
+                        </div>
                         <ul>
                             <li>
                                 <a href="#">
@@ -280,7 +275,7 @@
                         </div>
                         <div class="info">
                             <h3>tust fisu</h3>
-                            <p>Misteriosa e enigmática, Tust Fisu é ideal para expressar segredos e curiosidade.</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dapibus orci eu eros semper elementum. Sed sollicitudin erat non ipsum dignissim iaculis.</p>
                         </div>
                         <ul>
                             <li>
@@ -308,7 +303,7 @@
                         </div>
                         <div class="info">
                             <h3>Bear fire</h3>
-                            <p>Com um toque de destemor, Bear Fire é perfeito para mostrar coragem e paixão.</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dapibus orci eu eros semper elementum. Sed sollicitudin erat non ipsum dignissim iaculis.</p>
                         </div>
                         <ul>
                             <li>
@@ -336,8 +331,8 @@
                         </div>
                         <div class="info">
                             <h3>Bartolomeo</h3>
-                            <p>Elegante e sofisticado, Bartolomeo traz charme clássico para sua coleção de figurinhas.</p>
-                    </div>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dapibus orci eu eros semper elementum. Sed sollicitudin erat non ipsum dignissim iaculis.</p>
+                        </div>
                         <ul>
                             <li>
                                 <a href="#">
@@ -364,7 +359,7 @@
                         </div>
                         <div class="info">
                             <h3>Ni-rot</h3>
-                            <p>Ágil e imprevisível, Ni-Rot é a escolha certa para mostrar movimentos rápidos e estilo único.</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dapibus orci eu eros semper elementum. Sed sollicitudin erat non ipsum dignissim iaculis.</p>
                         </div>
                         <ul>
                             <li>
@@ -392,8 +387,8 @@
                         </div>
                         <div class="info">
                             <h3>own *-*</h3>
-                            <p>Divertido e expressivo, Own *-* é ideal para representar reações animadas e criativas.</p>
-                    </div>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dapibus orci eu eros semper elementum. Sed sollicitudin erat non ipsum dignissim iaculis.</p>
+                        </div>
                         <ul>
                             <li>
                                 <a href="#">
@@ -420,17 +415,19 @@
     <section class="s-world">
         <div class="container">
             <div class="title" data-aos="fade-up">
-                <h2 style="font-size: 35em;">Mundo</h2>
-                <span>de possibilidades</span>
+                <h2>world</h2>
+                <span>of possibility</span>
             </div>
-            <p data-aos="fade-up">Transforme sua <strong>criatividade</strong> em figurinhas únicas! <strong>Cadastre-se</strong> agora em nosso site, crie, compre e venda seus próprios designs. A comunidade de colecionadores está <strong>esperando</strong> por você!</p>
+            <p data-aos="fade-up">Turn your <strong>creativity</strong> into unique stickers! <strong>Sign up</strong> now on our website, create, buy, and sell your own sticker designs. The collector's community is <strong>waiting</strong> for you!</p>
             <a href="" class="bnt-primary" data-aos="fade-up">
-                <span>Cadastrar</span>
-                <img src="img/arrow.png" alt="botão seta">
+                <span>Sign Up</span>
+                <img src="img/arrow.png" alt="arrow button">
             </a>
         </div>
-        <img src="img/img03.png" alt="" class="ilustra gaviao" data-aos="fade-right">
-        <img src="img/img01.png" alt="" class="ilustra tigre" data-aos="fade-right">
+        <img src="img/img03.png" alt="" class="ilustra gaviao"
+        data-aos="fade-right">
+        <img src="img/img01.png" alt="" class="ilustra tigre"
+        data-aos="fade-right">
         <img src="img/img04.png" alt="" class="ilustra pouvo" data-aos="fade-left">
         <img src="img/img02.png" alt="" class="ilustra coruja" data-aos="fade-left">
     </section>
@@ -439,11 +436,11 @@
         <div class="container">
             <div class="first-area">
                 <div class="left">
-                    <img src="img/FIG.svg" alt="logo rodapé">
-                    <p>Com mais de 500.000 usuários ativos ao redor do mundo, transformando criatividade em colecionáveis. Liberte sua imaginação com a FigPro!</p>
+                    <img src="img/FIG.svg" alt="">
+                    <p>With over 500,000 active users worldwide, turning creativity into collectibles. Unleash your imagination with FigPro!</p>
                 </div>
                 <div class="right">
-                    <h3>nossas redes</h3>
+                    <h3>our networks</h3>
                     <ul>
                         <li><a href="#">INSTAGRAM</a></li>
                         <li><a href="#">TWITTER</a></li>
@@ -452,8 +449,8 @@
                 </div>
             </div>
             <div class="second-area">
-                <p>©2024 Inc. Todos os direitos reservados.</p>
-                <p>{} Website desenvolvido por ebrian.com.br e feito no canal Codeboost</p>
+                <p>©2024 Inc. All rights reserved.</p>
+                <p>{} Website developed by ebrian.com.br</p>
             </div>
         </div>
     </footer>
@@ -461,5 +458,6 @@
     <script src="https://unpkg.com/@studio-freight/lenis@1.0.42/dist/lenis.min.js"></script> 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="./js/scripts.js"></script>
+     
 </body>
-</html>
+</html> 
