mexi algumas coisas

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./css/main.min.css">
 </head>
 <body>
-    <header>
+    <header style="background-color: #ff0; color: #f00; font-family: 'Comic Sans MS', cursive; font-size: 28px; padding: 20px; text-align: center;">
         <div class="container">
             <button class="btn-mobile">
                 <img src="img/Group 40.svg" alt="hamburguii">
@@ -35,12 +35,12 @@
         </div>
     </header>
 
-    <section class="s-hero">
+    <section class="s-hero" style="background-color: var(--BLACK-PRIMARY); color: var(--YELLOW); font-size: 0.75rem;">
         <div class="container">
             <div class="left-text" data-aos="fade-up">
                 <div class="title">
-                    <h1>Explore the<br />
-                        <span>Enchanted World</span>
+                    <h1 style="color: #ff00ff;">Explore the<br />
+                        <span style="color: #ff00ff;">Enchanted World</span>
                     </h1>
                     <img src="img/of Animated Stickers!.svg" alt="of Animated Stickers">
                 </div>
@@ -68,7 +68,7 @@
         </div>
     </section>
 
-    <section class="s-numbers">
+    <section class="s-numbers" style="background-color: var(--BLACK-SECONDAY); color: var(--WHITE); font-size: 0.8rem;">
         <div class="container">
             <p data-aos="fade-left">Discover stickers that are true stars in our catalog! Our Featured Section showcases the most incredible and enchanting creations, ready to bring life to your chats and make your conversations even more special.</p>
             <div class="box">
@@ -94,10 +94,10 @@
         </div>
     </section>
 
-    <section class="s-how-to-use">
+    <section class="s-how-to-use" style="background-color: var(--BLACK-PRIMARY); color: var(--YELLOW); font-size: 0.7rem;">
         <div class="container">
             <div class="left" data-aos="fade-right">
-                <h2>How To use</h2>
+                <h2 style="color: #ff00ff; font-size: 100px;">How To use</h2>
                 <ul>
                     <li>
                         <h3>1 - Discover the Enchantment:</h3>
@@ -128,11 +128,11 @@
         </a>
     </section>
 
-    <section class="s-stories">
+    <section class="s-stories" style="background-color: var(--BLACK-SECONDAY); color: var(--WHITE); font-size: 0.75rem;">
         <div class="container">
             <div class="title" data-aos="fade-right">
                 <h4>Stickers  that <strong>tell</strong></h4>
-                <h2>Stories</h2>
+                <h2 style="color: #ff00ff; font-size: 350px;">Stories</h2>
             </div>
             <div class="text" data-aos="fade-up">
                 <img src="img/imgSobre1.png" alt="sapo karate">
@@ -145,7 +145,7 @@
         </div>
     </section>
 
-    <section class="s-strickers">
+    <section class="s-strickers" style="background-color: var(--BLACK-PRIMARY); color: var(--YELLOW); font-size: 0.7rem;">
         <div class="container">
             <div class="title" data-aos="fade-left">
                 <span class="subtitle">Some</span>
@@ -156,7 +156,7 @@
                 </h2>
             </div>
             <div class="all" data-aos="fade-up">
-                <div class="card-sticker">
+                <div  class="card-sticker">
                     <div class="content">
                         <div class="img">
                             <img src="img/Group 24 (1).png" alt="">
@@ -412,11 +412,11 @@
         </div>
     </section>
 
-    <section class="s-world">
+    <section class="s-world" style="background-color: var(--BLACK-SECONDAY); color: var(--WHITE); font-size: 0.6rem;">
         <div class="container">
             <div class="title" data-aos="fade-up">
-                <h2>world</h2>
-                <span>of possibility</span>
+                <h2 style="color: #ff00ff; font-size: 100px;">world</h2>
+                <span style="color: #00ffff; font-size: 10px;">of possibility</span>
             </div>
             <p data-aos="fade-up">Turn your <strong>creativity</strong> into unique stickers! <strong>Sign up</strong> now on our website, create, buy, and sell your own sticker designs. The collector's community is <strong>waiting</strong> for you!</p>
             <a href="" class="bnt-primary" data-aos="fade-up">
@@ -432,7 +432,7 @@
         <img src="img/img02.png" alt="" class="ilustra coruja" data-aos="fade-left">
     </section>
 
-    <footer>
+    <footer style="background-color: var(--BLACK-PRIMARY); color: var(--YELLOW); font-size: 0.75rem;">
         <div class="container">
             <div class="first-area">
                 <div class="left">
